--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         </div>
     </div>
     <div class="banner">
+        <div>
+            <h1>FRESH COFFEE IN <br> THE MORNING </h1>
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, culpa! <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit, maiores?</P>
+            <br>
+            <button>Get Yours Now</button>
+        </div>
        
     </div>
     
